add favorite and cart controller
