# app/Models/Product.php
@@ -34,4 +34,15 @@ class Product extends Model
     {
         return $this->hasMany(ProductSupplier::class);
     }
+
+    public function favorites()
+    {
+        return $this->hasMany(Favorite::class);
+    }
+
+    public function carts()
+    {
+        return $this->hasMany(Cart::class);
+    }
+
 }
