# routes/api.php
@@ -10,6 +10,8 @@ use App\Http\Controllers\ProductSupplierController;
 use App\Http\Controllers\ProfileController;
 use App\Http\Controllers\SupplierController;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\FavoritesController;
+use App\Http\Controllers\CartController;
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
 use App\Http\Controllers\ConfirmablePasswordController;
 use App\Http\Controllers\Auth\EmailVerificationNotificationController;
@@ -30,14 +32,14 @@ use App\Http\Controllers\Auth\VerifyEmailController;
 
 // Authentication Routes
 //Route::middleware('api')->group(function () {
-    Route::post('/login', [AuthenticatedSessionController::class, 'store']);
-    Route::delete('/logout', [AuthenticatedSessionController::class, 'destroy'])->middleware('auth:sanctum');
-    Route::post('/register', [RegisteredUserController::class, 'store']);
-    Route::post('/password/email', [PasswordResetLinkController::class, 'store']);
-    Route::post('/password/reset', [NewPasswordController::class, 'store']);
+Route::post('/login', [AuthenticatedSessionController::class, 'store']);
+Route::delete('/logout', [AuthenticatedSessionController::class, 'destroy'])->middleware('auth:sanctum');
+Route::post('/register', [RegisteredUserController::class, 'store']);
+Route::post('/password/email', [PasswordResetLinkController::class, 'store']);
+Route::post('/password/reset', [NewPasswordController::class, 'store']);
 
-    Route::get('/email/verify/{id}/{hash}', [VerifyEmailController::class, '__invoke'])->middleware(['signed'])->name('verification.verify');
-    Route::post('/email/resend', [EmailVerificationNotificationController::class, 'store'])->middleware('auth:sanctum');
+Route::get('/email/verify/{id}/{hash}', [VerifyEmailController::class, '__invoke'])->middleware(['signed'])->name('verification.verify');
+Route::post('/email/resend', [EmailVerificationNotificationController::class, 'store'])->middleware('auth:sanctum');
 //});
 
 Route::middleware(['auth:sanctum'])->group(function () {
@@ -121,4 +123,10 @@ Route::middleware(['auth:sanctum'])->group(function () {
      * )
      */
     Route::apiResource('admins', AdminController::class);
+
+    Route::middleware('auth:sanctum')->group(function () {
+        Route::apiResource('favorites', FavoritesController::class)->only(['index', 'store', 'destroy']);
+        Route::apiResource('cart', CartController::class)->only(['index', 'store', 'update', 'destroy']);
+    });
+
 });
